# spf.guru-pdns-backend

./: .devcontainer.json  .env.example  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pdns.conf.example  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in
docs/: DMARCREPORT_INTEGRATION.md
scripts/: test_pubsub.rb
src/spf_guru/: __init__.py  __main__.py  app.py
src/spf_guru/api/: healthcheck.py  models.py  routes.py
src/spf_guru/core/: __init__.py  cache.py  config.py  database.py  extractor.py  whitelist.py
src/spf_guru/dns/: __init__.py  patterns.py  resolver.py
src/spf_guru/utils/: banners.py  decorators.py  exceptions.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_extractor.py  test_patterns.py  test_routes.py
