[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spf-guru"
version = "1.0.0"
description = "SPF Guru PowerDNS Remote Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/spf_guru"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pylint.messages_control]
disable = [
    "W0718",  # broad-exception-caught - acceptable for Redis/network error handling
    "W1203",  # logging-fstring-interpolation - f-strings are fine, perf impact negligible
    "W0603",  # global-statement - used for singleton pattern, acceptable
    "W0706",  # try-except-raise - used for CancelledError propagation
]
